# ckan-devstaller

./: Cargo.toml  README.md  ckan_uninstaller.sh  install.bash
.github/workflows/: run-ckan-only-install.yml
docs/: .gitignore  README.md  components.json  mdx-components.tsx  next.config.mjs  package.json  source.config.ts
docs/app/: global.css  layout.tsx
docs/app/(home)/: page.tsx
docs/app/og/docs/[...slug]/: route.tsx
docs/components/: builder.tsx
docs/components/builder-sections/: ckan-extensions.tsx  ckan-version.tsx  features.tsx  presets.tsx
docs/components/ui/: button.tsx  switch.tsx
docs/content/docs/: builder.mdx  index.mdx  meta.json  what-is-ckan-devstaller.mdx
docs/content/docs/changelog/: 0.3.0.mdx  0.3.1.mdx  0.3.2.mdx  0.3.3.mdx
docs/content/docs/reference/: developing-with-wsl.mdx  installation-architecture.mdx  meta.json
docs/content/docs/tutorials/: uninstall-ckan.mdx
docs/lib/: layout.shared.tsx  source.ts
src/: main.rs  questions.rs  steps.rs  styles.rs
