[package]
name = "ckan-devstaller"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
human-panic = "2.0.3"
inquire = "0.7.5"
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
rust-ini = "0.21.2"
serde_json = "1.0.142"
xshell = "0.2.7"
xshell-venv = "1.3.0"
